--- a/content/lectures/06-directsampling.Rmd
+++ b/content/lectures/06-directsampling.Rmd
@@ -5,7 +5,7 @@ date: "2020-06-11"
 read_date: "2020-06-11"
 menu:
   lectures:
-    parent: "Part II: Bayesian computation"
+    parent: "III: Calcul numérique pour l'analyse bayésienne"
     weight: 2
 type: docs
 bibliography: "../../static/bib/references.bib"
