--- a/content/lectures/07-mcmcalgos.Rmd
+++ b/content/lectures/07-mcmcalgos.Rmd
@@ -5,7 +5,7 @@ date: "2020-06-18"
 read_date: "2020-06-18"
 menu:
   lectures:
-    parent: "Part II: Bayesian computation"
+    parent: "III: Calcul numérique pour l'analyse bayésienne"
     weight: 3
 type: docs
 bibliography: "../../static/bib/references.bib"
