--- a/content/lectures/09-postmortemreanalysis.Rmd
+++ b/content/lectures/09-postmortemreanalysis.Rmd
@@ -5,7 +5,7 @@ date: "2020-06-25"
 read_date: "2020-06-25"
 menu:
   lectures:
-    parent: "Part III: Bayesian applications in biomedical sciences"
+    parent: "IV: Études de cas"
     weight: 1
 type: docs
 bibliography: "../../static/bib/references.bib"
