--- a/content/lectures/03-bayesinference.Rmd
+++ b/content/lectures/03-bayesinference.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Inférence bayésienne"
 linktitle: "Inférence bayésienne"
-date: "2020-06-11"
-read_date: "2020-06-11"
+date: "2020-11-30"
+class_date: "2020-12-01"
 menu:
   lectures:
     parent: "II Modélisation bayésienne"
