--- a/content/TD/_index.Rmd
+++ b/content/TD/_index.Rmd
@@ -1,9 +1,10 @@
 ---
 title: Travaux dirigés
-slug: TD
-citeproc: true
-bibliography: ../../static/bib/references.bib
-csl: ../../static/bib/chicago-syllabus-no-bib.csl
+type: docs
+menu:
+  td:
+    parent: Sujets
+    weight: 1
 output:
   blogdown::html_page:
     toc: true
