--- a/content/projet/index.Rmd
+++ b/content/projet/index.Rmd
@@ -17,7 +17,7 @@ Vous serez évalués dans cette UE selon un rendu de projet sous forme de rappor
 ## Consignes
 
  - **Composition des groupes**
-    1. Blandine Gendre, Klervi Le Gall, Minh Huyen Ton Nu Nguyet & Herman Nzaba Loundou
+    1. Blandine Gendre, Klervi Le Gall, Minh Huyen & Herman Nzaba Loundou
     2. Alexis François, Samantha Labarbe, Aurelien Lascouts & Mélanie Huchon
     3. Ariane Bercu, Olivier Quintin & Grace Zinsou 
     4. Antoine Gouelibo, Lyvia Magloire & Noelia Retuerto
