--- a/content/TD/01-exercice1.Rmd
+++ b/content/TD/01-exercice1.Rmd
@@ -32,7 +32,6 @@ Pour rappel, la densité de la loi de Normale est : $f_{\theta,\sigma^2}(y)=\fra
  1. Écrire le modèle bayésien considéré.
 	
 :::Correction
-
  1. **Question d'intérêt**  
  Elle porte ici sur la moyenne des $Y_i$.
  
@@ -43,11 +42,13 @@ Pour rappel, la densité de la loi de Normale est : $f_{\theta,\sigma^2}(y)=\fra
  3. **loi(s) *a priori***
  $$\theta\sim\pi(\theta)$$
  (car $\sigma^2$ est considérée connue).
-
 :::
+<br>
 
 
- 2. Écrire la vraisemblance et la log-vraisemblance de l'échantillon $y_i, i=1,\ldots,n$, en faisant apparaître $\bar{y}_{(n)}=\frac{1}{n} \sum_{i=1}^n y_i$ sous la forme $\left(\theta-\bar{y}_{(n)}\right)^2$.  
+ 2. Montrer que la log-vraisemblance de l'échantillon $y_i, i=1,\ldots,n$ peut s'écrire sous la forme : 
+$$\log f(\boldsymbol{y}|\theta) = h(\boldsymbol{y},\sigma)-\frac{\left(\bar y_{(n)} -\theta\right)^2}{2\sigma^2/n}$$
+faisant apparaître $\bar{y}_{(n)}=\frac{1}{n} \sum_{i=1}^n y_i$ sous la forme $\left(\theta-\bar{y}_{(n)}\right)^2$.  
 Attention : on rappelle qu'une somme de nombre au carré n'est pas égale au carré de la somme de ces nombres...
  
 :::Correction
@@ -68,21 +69,66 @@ La log-vraisemblance $\ell$ s'écrit donc :
 \end{align*}
 
 
-La log-vraisemblance se simplifie finalement en :
-$$\log f(\boldsymbol{y}|\theta) = h(\boldsymbol{y},\sigma)-\frac{(\bar y_{(n)} -\theta)^2}{2\sigma^2/n}$$
+La log-vraisemblance se simplifie finalement bien en :
+$$\log f(\boldsymbol{y}|\theta) = h(\boldsymbol{y},\sigma)-\frac{\left(\bar y_{(n)} -\theta\right)^2}{2\sigma^2/n}$$
 où $h(\boldsymbol{y},\sigma)$ ne dépend pas de $\theta$. 
 
  - Astuce n°1 : multiplier par $n$ au numérateur et au dénominateur
  - Astuce n°2 : introduire le terme manquant et son opposé pour retrouvé l'identité remarquable (ce qui reste ne dépend pas de $\theta$)
-
 :::
+<br>
 
  3. Écrire la dérivée première et seconde de la log-vraisembance par rapport à $\theta$ et l'information de Fisher pour $\theta$.
 
- 4. Quel est la loi \textit{a priori} de Jeffrey pour $\theta$? Est-ce qu'il définit densité propre ou impropre ?
+:::Correction
+La dérivée seconde de \log f(\boldsymbol{y}|\theta) par rapport à $\theta$ est: $-n/\sigma^2$.
 
- 5. En prenant cette loi \textit{a priori}, écrire le numérateur de la loi \textit{a posteriori} de $\theta$.  En déduire la distribution \textit{a posteriori} de $\theta$.
+Cette quantité ne dépend pas de $\boldsymbol{y} =\{y_1,\dots,y_n\}$, on obtient donc directement : $I(\theta)=n/\sigma^2$.
+:::
+<br>
 
- 6. On observe un deuxième échantillon $\{y_i\}, i=n+1,\ldots,2n$ $iid$ de même loi que le premier échantillon. Quelle est la distribution \textit{a posteriori} de $\theta$ en prenant un \textit{a priori} uniforme ? Faire le calcul de deux façons:
+ 4. Quel est la loi *a priori* de Jeffrey pour $\theta$? Est-ce qu'il définit densité propre ou impropre ?
+ 
+:::Correction
+La loi *a priori* de Jeffrey est alors simplement : $\pi(\theta)\propto \sqrt{n}/\sigma$. 
+
+Comme cette valeur ne dépend pas de $\theta$, il s'agit d'une distribution uniforme impropre :
+    $$\int_\Theta\pi(\theta)d\theta \propto \int_{-\infty}^{+\infty}\dfrac{\sqrt{n}}{\sigma} d\theta = \infty$$
+:::
+<br>
+
+ 5. En prenant utilisant cette loi *a priori*, écrire le numérateur de la loi *a posteriori* de $\theta$.  En déduire la distribution *a posteriori* de $\theta$.
+ 
+:::Correction
+Puisque la loi *a priori* de Jeffrey correspond à la loi Uniforme, d'après le théorème de Bayes, le numérateur de la loi *a posteriori* est simplement la vraisemblance :
+\begin{align*}
+  p(\theta|\boldsymbol{y}) &\propto f(\boldsymbol{y}|\theta) \pi(\theta)\\
+  & \propto e^{-\frac{(\bar y_{(n)}-\theta)^2}{2\sigma^2/n}}
+\end{align*}
+
+On en déduit, par **identification**, que la distribution *a posteriori* de $\theta$ est une normale d'espérance $\bar y_{(n)}$ et de variance $\sigma^2/n$ ! 
+
+On remarque que ce résultat explicite illustre bien la concentration de la loi *a posteriori* au fur et à mesure que le nombre d'observations augmente.
+:::
+<br>
+
+
+
+ 6. On observe un deuxième échantillon $\{y_i\}, i=n+1,\ldots,2n$ $iid$ de même loi que le premier échantillon. Quelle est la distribution *a posteriori* de $\theta$ en prenant un *a priori* uniforme ? Faire le calcul de deux façons:
     a. en considérant que l'on a un échantillon $iid$ de taille $2n$
-    b. en utilisant la distribution *a posteriori* obtenue pour le premier échantillon comme distribution *a priori* pour le second échantillon.
+
+:::Correction
+Considérant que l'échantillon est de taille $2n$ il suffit d'appliquer le même raisonnement que précédemment : la distribution *a posteriori* est donc **normale**, d'espérance $\overline{y}_{(2n)}$ (la moyenne calculée sur les **deux** échantillons !), et de variance $\sigma^2/2n$
+:::
+<br>
+    
+  b. en utilisant la distribution *a posteriori* obtenue pour le premier échantillon comme distribution *a priori* pour le second échantillon (Bayésien séquentiel).
+  
+:::Correction
+La loi *a priori* pour l'analyse du second échantillon est, toujours d'après le résultat précédent $\mathcal{N}(\mu, s^2)$, avec $\mu=\bar y_{(n)}$ et $s^2=\sigma^2/n$ (c'est-à-dire la loi *a posteriroi* du premier échantillon devient la loi *a priori* pour l'analyse du second.
+
+En appliquant à nouveau le théorème de Bayes pour calculer le numérateur de la distribution *a posteriori* du second échantillon, on identifie à nouveau est une loi normale, dont l'espérance est $(\bar y_{(n)}+ \bar y_{(n+1:2n)})/2=\bar y_{(2n)}$ (où $\bar y_{(n+1:2n)}= \dfrac{1}{n}\sum_{i=n+1}^{2n}y_i$), et de variance $\sigma^2/2n$. 
+
+NB: ne pas oublier d'introduire le 2 au dénominateur de la somme pour bien avoir la moyenne sur $2n$ lors du calcul
+:::
+
