--- a/content/cours/10-diffposterior.Rmd
+++ b/content/cours/10-diffposterior.Rmd
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Une difficile estimation de la distribution a posteriori"
 linktitle: "Une difficile estimation de la distribution a posteriori"
 date: "2020-11-30"
 read_date: "2020-12-03"
@@ -13,7 +13,7 @@ csl: "../../static/bib/chicago-fullnote-bibliography-no-bib.csl"
 slides: "01-slides"
 output:
   blogdown::html_page:
-    toc: false
+    toc: true
 ---
 
 ## Une difficile estimation de la distribution *a posteriori*
