--- a/content/cours/14-autresmethodes.Rmd
+++ b/content/cours/14-autresmethodes.Rmd
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Autres méthodes"
 linktitle: "Autres méthodes"
 date: "2020-11-30"
 read_date: "2020-12-03"
@@ -13,10 +13,8 @@ csl: "../../static/bib/chicago-fullnote-bibliography-no-bib.csl"
 slides: "01-slides"
 output:
   blogdown::html_page:
-    toc: false
+    toc: true
 ---
-
-## Autres méthodes
 
 ### Bayésien variationnel
   
