--- a/content/cours/11-echantillondirect.Rmd
+++ b/content/cours/11-echantillondirect.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Méthodes d'échantillonnage directes"
-linktitle: "Méthodes d'échantillonnage directes"
+linktitle: "Échantillonnage direct"
 date: "2020-11-30"
 read_date: "2020-12-03"
 menu:
@@ -34,6 +34,7 @@ Pour générer un échantillon pseudo-aléatoire selon la loi uniforme sur $[0;1
  
 Choisir $a$, $b$ et $m$ de manière à ce que $y_n$ ait une période très longue et que $(x_1,\dots , x_n)$ puisse être considéré comme $iid$
 :::
+<br>
 
 \noindent où $y_0$ est appelé la "graine " (*seed* en anglais). On remarque que l'on a necessairement $0 \leq y_n \leq m - 1$. En pratique on prend $m$ très grand (par exemple $2^{19937}$, la valeur par défaut dans R qui utilise l'algorithme Mersenne-Twister). Dans ce cours, on ne va pas plus s'intéresser à la génération de nombre pseudo-alétoires selon la loi uniforme sur $[0;1]$, il s'agit d'un outil que l'on considère fiable et qui est utilisé par les différents algorithmes présentés par la suite.
 
@@ -63,10 +64,12 @@ sont indépendantes et suivent chacune la loi normale $N(0,1)$.
 **Inverse généralisée**  
 Pour une fonction $F$ définie sur $\mathbb{R}$, on définit son inverse généralisée par $$ F^{-1}(u) = \text{inf}\{x; F(x)>u\}$$
 :::
+<br>
 
 ::: {.MyProp data-latex=""} 
 Soit $F$ la fonction de répartition d'une distribution de probabilité, et soit $U$ une variable aléatoire suivant une loi uniforme sur $[0;1]$. Alors $F^{-1}(U)$ définit une variable aléatoire ayant pour fonction de répartition $F$.
 :::
+<br>
   
 On déduit de la propriété ci-dessus que si l'on connaît la fonction de répartition de la loi selon laquelle on veut simuler, et si l'on est capable de l'inverser, alors on peut générer un échantillon suivant cette loi à partir d'un échantillon uniforme sur $[0;1]$.
   
@@ -75,7 +78,8 @@ On déduit de la propriété ci-dessus que si l'on connaît la fonction de répa
 On a la densité de la loi exponentielle qui est $f(x) = \lambda exp(-\lambda x)$, et la fonction de répartition (son intégrale) qui vaut $F(x) = 1-exp(- \lambda x)$.  
 Posons $F(x)=u$. On remarque alors que $x=-\frac{1}{\lambda}\log(1-u)$.  
 Si $U\sim \mathcal{U}_{[0;1]}$, alors $X=F^{-1}(U)\sim Exp(\lambda)$.
-:::  
+::: 
+<br>
   
   
 #### Méthode d'acceptation-rejet
@@ -112,8 +116,8 @@ Pour $i=1, \dots, n$ :
       sinon on le **rejette** et on retourne en 1.
     
   $(y_1, \dots, y_n) \overset{iid}{\sim}f$
-
 :::
+<br>
 
 \noindent Plus $M$ est petit, plus le taux de rejet est faible et plus l'algorithme est efficace (au sens où il nécessite moins d'itérations pour obtenir un échantillon de taille $n$). On a donc intérêt à choisir $g$ le plus proche possible de $f$, en particulier lorsque la dimension augmente (l'impact de $M$ étant d'autant plus important alors). Néanmoins, la loi de proposition aura nécessairement des queues plus lourdes que la loi cible, et ce dans toutes les dimensions de l'espace des paramètres. À cause du fléau de la dimension, lorsque le nombre de paramètres augmente, le taux d'acceptation décroit très rapidement. \bigskip\medskip
 
@@ -122,11 +126,14 @@ Pour $i=1, \dots, n$ :
 `r if(knitr::is_html_output()){emo::ji("point_right")}` \textcolor{gold}{\faHandORight~} *Exercice* *1* : Construire un pseudo-échantillon de taille $n$ selon la loi discrète suivante (multinomiale à $m$ éléments $\{x_1, \dots, x_m\}$) :
 $$P(X=x) = p_1\delta_{x_1}(x) + p_2\delta_{x_2}(x) + \dots p_m\delta_{x_m}(x) \quad \text{ avec }\sum_{i=1}^m p_i = 1  \text{ et } \delta_{a}(x) = \mathbb{1}_{\{x=a\}}$$
 :::
+<br>
 
 :::{.Exercise data-latex=""}
 `r if(knitr::is_html_output()){emo::ji("point_right")}` \textcolor{gold}{\faHandORight~} *Exercice* *2* : Grâce à la méthode par inversion, générer un pseudo-échantillon de taille suivant une loi de Cauchy (dont la densité est $f(x)=\frac{1}{\pi(1+x^2)}$), sachant que $\arctan'(x)=\frac{1}{(1+x^2)}$ et que $\underset{x\rightarrow-\infty}{\lim} arctan(x) = -\frac{\pi}{2}$.\medskip
 :::
+<br>
 
 :::{.Exercise data-latex=""}
 `r if(knitr::is_html_output()){emo::ji("point_right")}` \textcolor{gold}{\faHandORight~} *Exercice* *3* : Écrire un algorithme d'acceptation-rejet pour simuler la réalisation d'un pseudo-échantillon de taille $n$ d'une loi normale $N(0,1)$ en utilisant une loi de Cauchy comme proposition. Trouvez la valeur de $M$ optimale.\medskip
 :::
+<br>
