--- a/content/cours/10-diffposterior.Rmd
+++ b/content/cours/10-diffposterior.Rmd
@@ -16,8 +16,6 @@ output:
     toc: true
 ---
 
-## Une difficile estimation de la distribution *a posteriori*
-
 ### Paramètres multidimensionnels
 
 Dans les applications réelles il y a en général plusieurs paramètres. On a donc un vecteur de paramètres $\boldsymbol{\theta} = (\theta_1,\dots, \theta_d)$. La formule de Bayes donnant la distribution *a posteriori* à partir de la loi *a priori* et de la vraisemblance est toujours valable dans ce cas : elle donne la loi *a posteriori* conjointe des $d$ paramètres. Toute l'information est contenue dans cette loi conjointe. Mais son calcul numérique n'est pas toujours facile, notamment dans des modèles complexes, et dans certains modèles même la vraisemblance est difficile à calculer. De plus, pour obtenir la distribution *a posteriori* conjointe, il faut aussi calculer la constante d'intégration $f(\boldsymbol{y}) = \textstyle \int_{\Theta^d} f(\boldsymbol{y}|\boldsymbol{\theta})\pi(\boldsymbol{\theta})\,\text{d}\boldsymbol{\theta}$. Une solution analytique n'est disponible que dans des cas très particuliers (notamment lors de l'utilisation de lois conjuguées); et dans la majorité des cas pratiques, l'intégrale doit en fait être calculée numériquement. Si $\theta$ est de dimension $d$, il s'agit de calculer une intégrale de multiplicité $d$, ce qui devient difficile lorsque $d$ est grand (les problèmes numériques apparaissent dès que $d> 4$). 
@@ -38,7 +36,7 @@ Un problème encore plus difficile surgit lorsque l'on veut tirer des conclusion
 
 Identifier la loi *a posteriori* apparaît simple en théorie grâce au théorème de Bayes. Mais en pratique le calcul de l'intégrale au dénominateur s'avère souvent extrêmement difficile. Trouver une expression analytique n'est possible que dans quelques cas bien particuliers, et l'évaluation numérique peut se révéler tout aussi difficile, notamment lorsque la dimension de l'espace des paramètres augmente.
 
-La statistique bayésienne computationnelle cherche des solutions pour pouvoir estimer la distribution *a posteriori*, y compris lorsqu'on ne connaît que le numérateur dans le théorème de Bayes (loi *a posteriori* non-normée). Les principales méthodes utilisées s'appuient sur des algorithmes d'échantillonnage permettant de générer un échantillon distribué selon la loi {a posteriori}. On peut distinguer deux grands types parmi ces algorithmes : i) d'abord les méthodes d'échantillonnage directes, où l'on génère un échantillon à partir d'une loi simple (par exemple uniforme), que l'on transforme afin que le résultat soit distribué selon la loi *a posteriori* ; ii) les méthodes de Monte-Carlo par chaînes de Markov (MCMC), où l'on construit une chaîne de Markov sur l'espace des paramètres dont la loi invariante correspond à la loi *a posteriori*.
+La statistique bayésienne computationnelle cherche des solutions pour pouvoir estimer la distribution *a posteriori*, y compris lorsqu'on ne connaît que le numérateur dans le théorème de Bayes (loi *a posteriori* non-normée). Les principales méthodes utilisées s'appuient sur des algorithmes d'échantillonnage permettant de générer un échantillon distribué selon la loi *a posteriori*. On peut distinguer deux grands types parmi ces algorithmes : i) d'abord les méthodes d'échantillonnage directes, où l'on génère un échantillon à partir d'une loi simple (par exemple uniforme), que l'on transforme afin que le résultat soit distribué selon la loi *a posteriori* ; ii) les méthodes de Monte-Carlo par chaînes de Markov (MCMC), où l'on construit une chaîne de Markov sur l'espace des paramètres dont la loi invariante correspond à la loi *a posteriori*.
 
 ### Méthode de Monte-Carlo
 
