--- a/content/lectures/_index.Rmd
+++ b/content/lectures/_index.Rmd
@@ -13,3 +13,9 @@ weight: 1
 
 Chacun des 4 chapitres du cours est diviser en plusieurs sections, et pour chaque section, plusieurs capsules vidéos en présente le contenu. À chaque fois, le diaporama présenté est également disponible au format pdf. 
 Cliquer les différentes sous-sections afin d'accéder à leur contenu.
+
+### Diaporamas
+
+ - Le diaporama complet couvrant les chapitres I & II est téléchargeable [ici](/slides/BAYESdia.pdf)
+ - Le diaporama complet couvrant le chapitre III sera téléchargeable [ici]()
+ - Le diaporama complet couvrant le chapitre IV sera téléchargeable [ici]()
